--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,10 @@ header {
 
 header h1 {
   
-    color: rgb(26, 52, 75);
+    color: rgb(63, 102, 231);
+    text-align: center;
+    margin: 5%;
+    
 
      
 }
